--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="hero-page">
-        <div class="container">
+        <div class="container" id="container-id">
             <div class="orange-container">
                 <img src="icon-sedans.svg" alt="">
                 <h1>SEDANS</h1>
